--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="flex justify-end space-x-2 mt-4"><div class="wireframe-button">Batal</div><div class="wireframe-button">Simpan</div></div>
                 </div>
                 <div class="wireframe-box">
-                    <div class="flex justify-between items-center mb-2"><h2 class="text-xl font-bold">Daftar Petani</h2><div class="wireframe-button">Download CSV</div></div>
+                    <h2 class="text-xl font-bold mb-2">Daftar Petani</h2>
                     <table class="wireframe-table">
                         <thead><tr><th>ID</th><th>Nama</th><th>No. HP</th><th>Aksi</th></tr></thead>
                         <tbody><tr><td>[Data]</td><td>[Data]</td><td>[Data]</td><td>[Edit] [Hapus]</td></tr></tbody>
@@ -188,7 +188,7 @@
                     <div class="flex justify-end space-x-2 mt-4"><div class="wireframe-button">Batal</div><div class="wireframe-button">Simpan</div></div>
                 </div>
                 <div class="wireframe-box">
-                    <div class="flex justify-between items-center mb-2"><h2 class="text-xl font-bold">Daftar Lahan</h2><div class="wireframe-button">Download CSV</div></div>
+                    <h2 class="text-xl font-bold mb-2">Daftar Lahan</h2>
                     <table class="wireframe-table">
                         <thead><tr><th>ID</th><th>Lokasi</th><th>Luas</th><th>Petani</th><th>Aksi</th></tr></thead>
                         <tbody><tr><td>[Data]</td><td>[Data]</td><td>[Data]</td><td>[Data]</td><td>[Edit] [Hapus]</td></tr></tbody>
@@ -209,7 +209,7 @@
                     <div class="flex justify-end space-x-2 mt-4"><div class="wireframe-button">Batal</div><div class="wireframe-button">Simpan</div></div>
                 </div>
                 <div class="wireframe-box">
-                    <div class="flex justify-between items-center mb-2"><h2 class="text-xl font-bold">Daftar Alat</h2><div class="wireframe-button">Download CSV</div></div>
+                    <h2 class="text-xl font-bold mb-2">Daftar Alat</h2>
                     <table class="wireframe-table">
                         <thead><tr><th>ID</th><th>Nama Alat</th><th>Tipe</th><th>Lokasi</th><th>Aksi</th></tr></thead>
                         <tbody><tr><td>[Data]</td><td>[Data]</td><td>[Data]</td><td>[Data]</td><td>[Edit] [Hapus]</td></tr></tbody>
@@ -230,7 +230,7 @@
                     <div class="flex justify-end space-x-2 mt-4"><div class="wireframe-button">Batal</div><div class="wireframe-button">Simpan</div></div>
                 </div>
                 <div class="wireframe-box">
-                    <div class="flex justify-between items-center mb-2"><h2 class="text-xl font-bold">Daftar Tanaman</h2><div class="wireframe-button">Download CSV</div></div>
+                    <h2 class="text-xl font-bold mb-2">Daftar Tanaman</h2>
                     <table class="wireframe-table">
                         <thead><tr><th>ID</th><th>Jenis</th><th>Lokasi</th><th>Tgl Tanam</th><th>Aksi</th></tr></thead>
                         <tbody><tr><td>[Data]</td><td>[Data]</td><td>[Data]</td><td>[Data]</td><td>[Edit] [Hapus]</td></tr></tbody>
@@ -258,7 +258,7 @@
                     <div class="flex justify-end space-x-2 mt-4"><div class="wireframe-button">Batal</div><div class="wireframe-button">Simpan Riwayat</div></div>
                 </div>
                 <div class="wireframe-box">
-                    <div class="flex justify-between items-center mb-2"><h2 class="text-xl font-bold">Riwayat Penyiraman</h2><div class="wireframe-button">Download CSV</div></div>
+                    <h2 class="text-xl font-bold mb-2">Riwayat Penyiraman</h2>
                     <table class="wireframe-table">
                         <thead><tr><th>ID</th><th>Lokasi</th><th>Waktu</th><th>Volume</th><th>Aksi</th></tr></thead>
                         <tbody><tr><td>[Data]</td><td>[Data]</td><td>[Data]</td><td>[Data]</td><td>[Hapus]</td></tr></tbody>
